--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@material-ui/core": "^4.12.3",
     "add": "^2.0.6",
     "axios": "^0.24.0",
+    "js-cookie": "^3.0.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.1",
     "@types/node": "17.0.0",
     "@types/react": "17.0.37",
     "eslint": "8.5.0",
